Added brackets, power and few constants

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,17 +20,21 @@
                 <input type="button" value="AC">
                 <input type="button" value="DEL">
                 <input type="button" value="%">
+                <input type="button" value="^">
                 <input type="button" value="/">
             </div>
             
             <div class="buttons">
+                <input type="button" value="π">
                 <input type="button" value="7">
                 <input type="button" value="8">
                 <input type="button" value="9">
                 <input type="button" value="*">
+                
             </div>
 
             <div class="buttons">
+                <input type="button" value="e">
                 <input type="button" value="4">
                 <input type="button" value="5">
                 <input type="button" value="6">
@@ -38,6 +42,7 @@
             </div>
 
             <div class="buttons">
+                <input type="button" value="00">
                 <input type="button" value="1">
                 <input type="button" value="2">
                 <input type="button" value="3">
@@ -45,7 +50,8 @@
             </div>
 
             <div class="buttons">
-                <input type="button" value="00">
+                <input type="button" value="(">
+                <input type="button" value=")">
                 <input type="button" value="0">
                 <input type="button" value=".">
                 <input type="button" value="=">
